# pyRecFusionSDK

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cmake/: FindRecFusion.cmake
example/: capture_playback.py  capture_png.py  console_reconstruction.py  reconstruct_from_sensor.py  show_sensor_info.py  show_sensors_info.py
examples/: capture_playback.py  capture_png.py  machine_token.py  math_operations.py  reconstruct_from_playback.py  reconstruct_sensor.py  reconstruct_sensor_listener.py  show_sensor_info.py
src/: init_calibration.cpp  init_image.cpp  init_matrix.cpp  init_mesh.cpp  init_meshviewer.cpp  init_recfusionsdk.cpp  init_reconstruction.cpp  init_rfsplayback.cpp  init_rfsrecorder.cpp  init_sensor.cpp  init_sensormanager.cpp  init_vector.cpp  pyRecFusionSDK.cpp
src/my_ext/: __init__.py
src/pyRecFusionSDK/: __init__.py
tests/: test_images.py  test_math.py  test_sdk.py
