[project]
name = "pyRecFusionSDK"
version = "0.1.0"
description = "Python wrapper around the RecFusionSDK library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Patryk Kiepas", email = "kiepas.patryk@gmail.com" },
]
classifiers = [
    "License :: MIT",
]
dependencies = [
    "pytest>=8.3.5",
]
# Optional: runtime dependency specification
# dependencies = [ "cryptography >=41.0" ]

[project.urls]
Homepage = "https://github.com/quepas/pyRecFusionSDK"

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
